<resources>
    <string name="app_name">Booknetwork</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Juancho</string>
    <string name="nav_header_subtitle">Cuenta activa</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_publications">My publications</string>
    <string name="menu_new_publication">New publication</string>
    <string name="menu_update_user">Update user</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_chat">Chats</string>

    <string name="none"></string>

    <string name="login">Login</string>
    <string name="login_register_here">New user? Register here</string>

    <string name="register">Register</string>

    <string name="book_management_contact">Contact</string>
    <string name="book_management_book_details">Book Details</string>
    <string name="book_management_book_manage">Book Manage</string>
    <string name="book_management_update_publication">Update Publication</string>

    //New Publication
    <string name="new_publication_title">Title</string>
    <string name="new_publication_autor">Autor</string>
    <string name="new_publication_editorial">Editorial</string>
    <string name="new_publication_year_edition">Year of edition</string>
    <string name="new_publication_isbn">ISBN</string>
    <string name="new_publication_pages">Pages</string>
    <string name="new_publication_languaje">Language</string>
    <string name="new_publication_type_deal">Type of deal</string>
    <string name="new_publication_synopsis">Synopsis</string>
    <string name="new_publication_book_condition">Book Condition</string>
    <string name="new_publication_book_Image">Book Image</string>

    <string name="new_publication_btn_select_image">Select Image</string>
    <string name="new_publication_btn_publish">Publish</string>

    //User Update
    <string name="update_user_username">Username</string>
    //and Register, Login
    <string name="update_user_first_name">First name</string>
    //and Register
    <string name="update_user_last_name">Last name</string>
    //and Register
    <string name="update_user_old_pass">Old password</string>
    <string name="update_user_new_pass">New password</string>

    <string name="update_user_txt_terms_conditions">By clicking Register you are agreeing to the Terms and Conditions.</string>
    //and Register

    <string name="update_user_btn_update">Update</string>

    //Register
    <string name="register_pass">Password</string>
    //and Login

    <string name="register_btn_Register">Register</string>

    <string name="register_log_in">Do you have an account? Log in here</string>

    //login
    <string name="login_btn_Login">Login</string>

    <string name="update_user_txt_new_user_register_here">New user? Register here</string>


    // book management
    <string name="book_management_year_edition_book_management">Year</string>
    <string name="book_management_btn_update">Update</string>
    <string name="book_management_btn_delete">Delete</string>

    // book details
    <string name="book_details_owner">Owner</string>
    <string name="book_details_contact_owner">Contact Owner</string>

    // update publication
    <string name="update_publication_btn_update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ttt">ttt</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>