<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/dw_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_publications"
            android:icon="@drawable/dw_menu_my_publications"
            android:title="@string/menu_my_publications" />
        <item
            android:id="@+id/nav_new_publication"
            android:icon="@drawable/dw_menu_new_publication"
            android:title="@string/menu_new_publication" />
        <item
            android:id="@+id/nav_update_user"
            android:icon="@drawable/dw_user_nav"
            android:title="@string/menu_update_user" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/dw_message"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/dw_logout"
            android:title="@string/menu_log_out" />
    </group>
</menu>