<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aplication_menu_ui.newPublication.NewPublicationFragment">

    <TextView
        android:id="@+id/text_new_publication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8sp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_new_publication"
        app:layout_constraintVertical_bias="0.066"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/new_publication_img_view"
                android:layout_width="138dp"
                android:layout_height="167dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                android:layout_marginRight="35dp"
                android:src="@drawable/dw_book_sample"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/new_publication_book_Image" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/new_publication_btn_select_image"
                app:layout_constraintEnd_toEndOf="@+id/new_publication_img_view"
                app:layout_constraintStart_toStartOf="@+id/new_publication_img_view"
                app:layout_constraintTop_toBottomOf="@+id/new_publication_img_view" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:hint="@string/new_publication_title"
                app:layout_constraintStart_toEndOf="@+id/new_publication_img_view"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_publication_edit_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_autor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/new_publication_autor"
                app:layout_constraintEnd_toEndOf="@+id/txt_input_layout_title"
                app:layout_constraintStart_toStartOf="@+id/txt_input_layout_title"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_publication_edit_text_autor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_editorial"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/new_publication_editorial"
                app:layout_constraintEnd_toEndOf="@+id/txt_input_layout_autor"
                app:layout_constraintStart_toStartOf="@+id/txt_input_layout_autor"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_autor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_publication_edit_text_editorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_year_edition"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/new_publication_year_edition"
                app:layout_constraintEnd_toEndOf="@+id/txt_input_layout_editorial"
                app:layout_constraintStart_toStartOf="@+id/txt_input_layout_editorial"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_editorial">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_publication_edit_text_num_year_edition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_isbn"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_publication_isbn"
                app:layout_constraintStart_toStartOf="@+id/new_publication_img_view"
                app:layout_constraintTop_toTopOf="@+id/txt_input_layout_pages">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_publication_edit_text_num_isbn"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_pages"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:hint="@string/new_publication_pages"
                app:layout_constraintEnd_toEndOf="@+id/txt_input_layout_year_edition"
                app:layout_constraintStart_toEndOf="@+id/txt_input_layout_isbn"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_year_edition">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_publication_edit_text_num_pages"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_languaje"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_publication_languaje"
                app:layout_constraintEnd_toEndOf="@+id/txt_input_layout_isbn"
                app:layout_constraintStart_toStartOf="@+id/txt_input_layout_isbn"
                app:layout_constraintTop_toTopOf="@+id/txt_input_layout_type_deal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_publication_edit_text_languaje"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_type_deal"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/new_publication_type_deal"
                app:layout_constraintEnd_toEndOf="@+id/txt_input_layout_pages"
                app:layout_constraintStart_toStartOf="@+id/txt_input_layout_pages"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_pages">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_publication_edit_text_type_deal"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_synopsis"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/new_publication_synopsis"
                app:layout_constraintEnd_toEndOf="@+id/txt_input_layout_type_deal"
                app:layout_constraintStart_toStartOf="@+id/txt_input_layout_languaje"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_type_deal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_publication_edit_text_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:lines="7"
                    android:maxLines="15"
                    android:padding="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_book_condition"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/new_publication_book_condition"
                app:layout_constraintEnd_toEndOf="@+id/txt_input_layout_synopsis"
                app:layout_constraintStart_toStartOf="@+id/txt_input_layout_synopsis"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_synopsis">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_publication_edit_text_book_condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="10"
                    android:padding="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/new_publication_btn_publish"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="70dp"
                android:text="@string/new_publication_btn_publish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txt_input_layout_book_condition"
                app:layout_constraintStart_toStartOf="@+id/txt_input_layout_book_condition"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_book_condition" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>