<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dw_fondo"
    tools:context=".aplication_menu_ui.updateUser.UpdateUserFragment">

    <TextView
        android:id="@+id/text_update_user"
        style="@style/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_username"
                style="@style/input_layoud_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/update_user_username"
                app:boxStrokeColor="@color/colors_inpu_text"
                app:layout_constraintEnd_toEndOf="@+id/txt_input_layout_first_name"
                app:layout_constraintStart_toStartOf="@+id/txt_input_layout_first_name"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/login_edit_text_user"
                    style="@style/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:drawableRight="@drawable/dw_user" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_first_name"
                style="@style/input_layoud_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/update_user_first_name"
                app:boxStrokeColor="@color/colors_inpu_text"
                app:layout_constraintEnd_toEndOf="@+id/txt_input_layout_last_name"
                app:layout_constraintStart_toStartOf="@+id/txt_input_layout_last_name"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_username">

                <EditText
                    android:id="@+id/register_edit_text_firt_name"
                    style="@style/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:drawableRight="@drawable/dw_user" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_last_name"
                style="@style/input_layoud_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/update_user_last_name"
                app:boxStrokeColor="@color/colors_inpu_text"
                app:layout_constraintEnd_toEndOf="@+id/txt_input_layout_pass"
                app:layout_constraintStart_toStartOf="@+id/txt_input_layout_pass"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_first_name">

                <EditText
                    android:id="@+id/register_edit_text_last_name"
                    style="@style/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:drawableRight="@drawable/dw_user" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_pass"
                style="@style/input_layoud_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/update_user_old_pass"
                app:boxStrokeColor="@color/colors_inpu_text"
                app:layout_constraintEnd_toEndOf="@+id/txt_input_layout_new_pass"
                app:layout_constraintStart_toStartOf="@+id/txt_input_layout_new_pass"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_last_name">

                <EditText
                    android:id="@+id/login_edit_text_pass"
                    style="@style/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:drawableRight="@drawable/dw_visibility" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_layout_new_pass"
                style="@style/input_layoud_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/update_user_new_pass"
                app:boxStrokeColor="@color/colors_inpu_text"
                app:layout_constraintEnd_toEndOf="@+id/txt_view_new_user_register_here"
                app:layout_constraintStart_toStartOf="@+id/txt_view_new_user_register_here"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_pass">

                <EditText
                    android:id="@+id/update_user_edit_text_new_pass"
                    style="@style/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:drawableRight="@drawable/dw_visibility"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_view_new_user_register_here"
                style="@style/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/update_user_txt_terms_conditions"
                android:textAlignment="center"
                android:textSize="@dimen/text_terms_conditions"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_layout_new_pass" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/button_green"
                android:text="@string/update_user_btn_update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txt_view_new_user_register_here"
                app:layout_constraintStart_toStartOf="@+id/txt_view_new_user_register_here"
                app:layout_constraintTop_toBottomOf="@+id/txt_view_new_user_register_here" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>